--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,11 @@
 development:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  domain_name: <%= ENV["DEFAULT_MAILER_HOST"] %>
 
 test:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  domain_name: <%= ENV["DEFAULT_MAILER_HOST"] %>
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  domain_name: <%= ENV["DEFAULT_MAILER_HOST"] %>
